--- a/.github/workflows/build-aab.yml
+++ b/.github/workflows/build-aab.yml
@@ -1,41 +1,36 @@
-name: Build Android AAB (Unsigned)
+name: Build AAB
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Download Android SDK
-      uses: android-actions/setup-android@v2
-      with:
-        api-level: 34
-        build-tools: 34.0.0
-        target: android-34
-        ndk: 25.2.9519653
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
 
-    - name: Make gradlew executable
-      run: chmod +x gradlew
+      - name: Make gradlew executable   # 👈 Add this step here
+        run: chmod +x ./gradlew
 
-    - name: Build Release AAB
-      run: ./gradlew bundleRelease
+      - name: Build Release AAB
+        run: ./gradlew bundleRelease
 
-    - name: Upload Unsigned AAB
-      uses: actions/upload-artifact@v4
-      with:
-        name: ResumeWriterApp-Unsigned-AAB
-        path: app/build/outputs/bundle/release/app-release.aab
-        if-no-files-found: error
+      - name: Upload AAB
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: app/build/outputs/bundle/release/app-release.aab
