--- a/.github/workflows/build-aab.yml
+++ b/.github/workflows/build-aab.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for better Gradle caching
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -23,11 +25,25 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Validate Gradle Wrapper
+        run: |
+          # Check if wrapper files exist
+          if [ ! -f "gradlew" ] || [ ! -f "gradle/wrapper/gradle-wrapper.jar" ] || [ ! -f "gradle/wrapper/gradle-wrapper.properties" ]; then
+            echo "Gradle wrapper files are missing or corrupted"
+            exit 1
+          fi
+          
+          # Verify the JAR file
+          file gradle/wrapper/gradle-wrapper.jar | grep -q "Java archive" || exit 1
+
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Test Gradle Setup
+        run: ./gradlew --version
+
       - name: Build Release AAB
-        run: ./gradlew bundleRelease
+        run: ./gradlew clean bundleRelease
 
       - name: Upload AAB
         uses: actions/upload-artifact@v4
