--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android' version '1.9.22'  // Match this version
+    id 'org.jetbrains.kotlin.android'  // ← REMOVE VERSION from here
 }
 
 android {
