--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,8 @@
+// In your project-level build.gradle
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22"
+        classpath 'com.android.tools.build:gradle:8.2.2' // Your current AGP
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22" // Update Kotlin to match
     }
 }
 
