--- a/.github/workflows/build-aab.yml
+++ b/.github/workflows/build-aab.yml
@@ -3,8 +3,6 @@ name: Build AAB
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -13,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -20,33 +20,19 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Set up Android SDK
+      - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Install Gradle
+      - name: Validate Gradle Wrapper
         run: |
-          # Install Gradle to regenerate wrapper if needed
-          sudo apt update
-          sudo apt install -y gradle
-
-      - name: Regenerate Gradle Wrapper
-        run: |
-          # Remove corrupted files
-          rm -f gradlew gradlew.bat
-          rm -rf gradle/wrapper
+          # Force download of Gradle 8.5
+          ./gradlew --version || true
           
-          # Regenerate wrapper
-          gradle wrapper --gradle-version=8.5 --distribution-type=bin
-          
-          # Verify regeneration
-          ls -la gradlew
-          ls -la gradle/wrapper/
-
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Build Release AAB
-        run: ./gradlew clean bundleRelease --no-daemon --stacktrace
+      - name: Build with Gradle
+        run: ./gradlew clean bundleRelease
 
       - name: Upload AAB
         uses: actions/upload-artifact@v4
