--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,22 +4,25 @@ plugins {
 }
 
 android {
+    namespace "com.example.resumewriter"
     compileSdk 34
-    
+
     defaultConfig {
-        applicationId "com.your.package"
-        minSdk 21
+        applicationId "com.example.resumewriter"
+        minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
     }
-    
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
+
     
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
