--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Add this line for billing:
+    implementation 'com.android.billingclient:billing:6.1.1'
+    implementation 'com.android.billingclient:billing-ktx:6.1.1'
+    
+    // Your other dependencies...
 }
