--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,35 +1,34 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace "com.example.resumewriter"
     compileSdk 34
-
+    
     defaultConfig {
-        applicationId "com.example.resumewriter"
-        minSdk 24
+        applicationId "com.yourcompany.resumewriter"
+        minSdk 21
         targetSdk 34
         versionCode 1
         versionName "1.0"
     }
-
+    
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-    // ✅ Keep these inside android {}
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = '1.8'
     }
 }
 
@@ -38,10 +37,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    // Add this line for billing:
+    
+    // Billing dependencies
     implementation 'com.android.billingclient:billing:6.1.1'
     implementation 'com.android.billingclient:billing-ktx:6.1.1'
     
-    // Your other dependencies...
+    // Firebase dependencies (if you're adding Firebase)
+    implementation 'com.google.firebase:firebase-firestore:24.9.1'
+    implementation 'com.google.firebase:firebase-auth:22.3.0'
 }
+
+// Add this at the bottom if using Firebase
+apply plugin: 'com.google.gms.google-services'
