--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,17 @@
+pluginManagement {
+    repositories {
+        google()  // Add this line first
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google() // Add this line here as well
+        mavenCentral()
+    }
+}
+
 rootProject.name = "ResumeWriterApp"
 include ':app'
