--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,23 @@
 // In your project-level build.gradle
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        google()       // ✅ Needed for Android & Google dependencies
+        mavenCentral() // ✅ Needed for Kotlin + other libs
+    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath "com.android.tools.build:gradle:8.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22"
-        classpath 'com.google.gms:google-services:4.4.0'
+        classpath "com.google.gms:google-services:4.4.0"
     }
 }
 
-tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
+
 
 
