--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 34
     
     defaultConfig {
-        applicationId "com.yourcompany.resumewriter"
+        applicationId "com.example.resumewriter"
         minSdk 21
         targetSdk 34
         versionCode 1
