--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,14 +39,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    
-    // ✅ CORRECT VERSIONS - Use one of these:
+
+    // UI + Lifecycle (needed for AppCompatActivity, ViewModel, LiveData, etc.)
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.activity:activity-ktx:1.8.2'
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+
+    // Billing (use latest stable versions)
     implementation 'com.android.billingclient:billing:6.2.0'
     implementation 'com.android.billingclient:billing-ktx:6.2.0'
-    
-    // Firebase dependencies
-    implementation 'com.google.firebase:firebase-firestore:24.9.1'
-    implementation 'com.google.firebase:firebase-auth:22.3.0'
+
+    // Firebase (BoM ensures versions stay compatible)
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
 
 // Add this at the bottom if using Firebase
