--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,15 @@ dependencies {
     implementation 'com.android.billingclient:billing-ktx:6.2.0'
 
     // Firebase (BoM ensures versions stay compatible)
+    // Firebase BOM
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    
+    // Other Firebase dependencies
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    
+    // Firebase Auth KTX without version
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx:22.3.2'
+  
 
 
     
