--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.alakdb.resumewriter">
 
     <!-- Internet permission since your app loads web content -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,21 +13,25 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <!-- Add your other activities here -->
-        <activity
-        android:name=".UserRegistrationActivity"
-        android:exported="false" /> 
-
         <!-- Main entry activity -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"> <!-- ✅ Required for Android 12+ -->
-            
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Add LoginActivity -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+
+        <!-- Add your other activities here -->
+        <activity
+            android:name=".UserRegistrationActivity"
+            android:exported="false" /> 
         
     </application>
 </manifest>
