--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.9.0'
 
     // UI + Lifecycle (needed for AppCompatActivity, ViewModel, LiveData, etc.)
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
