--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,12 +61,17 @@ dependencies {
     // Other Firebase dependencies
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
-
-    // Coroutines - KEEP THIS, it's necessary
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
     
     // WebView compatibility (optional but recommended)
     implementation 'androidx.webkit:webkit:1.8.0'
+
+     // Network
+    implementation("com.squareup.okhttp3:okhttp:4.11.0")
+    implementation("com.google.code.gson:gson:2.10.1")
+    
+    // Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3")
 }
 
 // Already applied at top, remove this duplicate
