--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,13 +66,22 @@ dependencies {
     implementation 'androidx.webkit:webkit:1.8.0'
 
      // Network
-    implementation("com.squareup.okhttp3:okhttp:4.11.0")
+    
     implementation("com.google.code.gson:gson:2.10.1")
-    implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
+    implementation"com.squareup.okhttp3:logging-interceptor:4.11.0"
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    
+    // JSON handling
+    implementation 'org.json:json:20230227'
+
+
+
+
     
     // Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3")
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
 }
 
 // Already applied at top, remove this duplicate
