--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <activity
         android:name=".ResumeGenerationActivity"
-        android:exported="false"
+        android:exported="true"
         android:label="Generate Resume"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
